fix(book card): fixed close modal button not showing properly on smaller screens

--- a/src/app/components/tarjeta-libro/tarjeta-libro.component.scss
+++ b/src/app/components/tarjeta-libro/tarjeta-libro.component.scss
@@ -26,9 +26,8 @@
 
 .tarjeta-libro:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
 }
-
 
 .tarjeta-superior {
   display: flex;
@@ -145,7 +144,7 @@
 .modal-overlay {
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.65);
+  background: rgba(0, 0, 0, 0.65);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -177,6 +176,7 @@
   background: transparent;
   font-size: 20px;
   cursor: pointer;
+  z-index: 999;
 }
 
 /* CONTENIDO */
@@ -210,7 +210,7 @@
   color: #b8860b;
 }
 
-// DESCRIPCIÓN COMPLETA CON SCROLL 
+// DESCRIPCIÓN COMPLETA CON SCROLL
 .descripcion-completa {
   margin-top: 10px;
   font-size: 0.9rem;
@@ -220,7 +220,7 @@
   padding-right: 6px;
 }
 
-// SCROLL ESTILO 
+// SCROLL ESTILO
 .descripcion-completa::-webkit-scrollbar {
   width: 6px;
 }
@@ -230,15 +230,19 @@
   border-radius: 4px;
 }
 
-//BOTONES ABAJO 
+//BOTONES ABAJO
 .modal-info .acciones-libro {
   margin-top: auto;
 }
 
 //ANIMACIONES
 @keyframes fadeIn {
-  from { opacity: 0 }
-  to { opacity: 1 }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes scaleIn {
@@ -254,7 +258,6 @@
 
 //RESPONSIVE
 @media (max-width: 600px) {
-
   .modal-contenido {
     flex-direction: column;
   }
@@ -262,6 +265,7 @@
   .modal-img {
     width: 100%;
     height: 220px;
+    margin-top: 2rem;
   }
 
   .descripcion-completa {
